--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@crestfi/crest-bnb-sdk",
-  "version": "1.0.10-dev.2",
+  "version": "1.0.2",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
